fix suggested products are not legible

--- a/src/app/grocery-list/grocery-list.component.css
+++ b/src/app/grocery-list/grocery-list.component.css
@@ -1,5 +1,5 @@
 .bs-suggestion.mat-list-item {
-  color: lightgray;
+  color: #9e9e9e;
 }
 
 .bs-accept-suggestion.mat-mini-fab {
